k8s/recharge/deployment.yaml
---
# Source: recharge/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recharge
  labels:
    helm.sh/chart: recharge-0.1.0
    app.kubernetes.io/name: recharge
    app.kubernetes.io/instance: recharge
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: recharge
    app.kubernetes.io/instance: recharge
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: recharge
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: app.fbox360.cn
    http:
      paths:
      - path: /api/recharge
        backend:
          serviceName: recharge
          servicePort: http
---
# Source: recharge/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recharge
  labels:
    helm.sh/chart: recharge-0.1.0
    app.kubernetes.io/name: recharge
    app.kubernetes.io/instance: recharge
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: recharge
      app.kubernetes.io/instance: recharge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recharge
        app.kubernetes.io/instance: recharge
    spec:
      containers:
        - name: recharge
          image: docker.flexem.com/flexem-fbox/recharge:1.0.0.13-f6f11c
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9003
              protocol: TCP
          volumeMounts:
            - mountPath: /app/certs
              name: certs
          resources:
            {}
      volumes:
        - name: certs
          secret:
            defaultMode: 256
            items:
            - key: alipayCertPublicKey.crt
              path: alipayCertPublicKey.crt
            - key: alipayRootCert.crt
              path: alipayRootCert.crt
            - key: appCertPublicKey.crt
              path: appCertPublicKey.crt
            - key: appPrivateKey.txt
              path: appPrivateKey.txt
            optional: false
            secretName: recharge
